--- a/css/variables-theme-2.css
+++ b/css/variables-theme-2.css
@@ -62,8 +62,7 @@ a.default-hovered:hover:after, a.default-hovered.default-hover:after {
 /* line 45, ../sass/variables-theme-2.scss */
 .header.top-menu.minimized-menu .primary .navbar .btn-navbar .icon-bar,
 .header.top-menu.transform-menu .primary .navbar .btn-navbar .icon-bar,
-.header.minimized-menu .primary .navbar .btn-navbar .icon-bar,
-.top-nav-line #menu-open .icon-bar {
+.header.minimized-menu .primary .navbar .btn-navbar .icon-bar {
   background-color: #02b26a;
 }
 
@@ -83,61 +82,56 @@ a.default-hovered:hover:after, a.default-hovered.default-hover:after {
 @media (max-width: 767px) {
   /* line 56, ../sass/variables-theme-2.scss */
   .menu-sidebar .widget-box > div ul li a, .menu-sidebar .widget-box > div ul li i {
-    color: #bbbbbb !important;
+    color: #bbb!important;
   }
 }
 
-/* line 61, ../sass/variables-theme-2.scss */
-.top-nav-line #menu-open {
-  background: #fff;
-}
-
-/* line 64, ../sass/variables-theme-2.scss */
+/* line 62, ../sass/variables-theme-2.scss */
 .top-nav-line #menu-open .text {
   color: #02b26a;
 }
 
-/* line 67, ../sass/variables-theme-2.scss */
+/* line 65, ../sass/variables-theme-2.scss */
 a.default-hovered:focus:after {
   background: #02b26a;
 }
 
-/* line 71, ../sass/variables-theme-2.scss */
+/* line 69, ../sass/variables-theme-2.scss */
 .top-menu .widget-box > div ul li a,
 .top-menu .widget-box > div ul li i {
   color: #eb8f00 !important;
 }
 
-/* line 75, ../sass/variables-theme-2.scss */
+/* line 73, ../sass/variables-theme-2.scss */
 .logo-mini {
   padding: 4px;
   margin: 20px 0 0 20px;
   background: #fff;
 }
 @media (max-width: 991px) {
-  /* line 75, ../sass/variables-theme-2.scss */
+  /* line 73, ../sass/variables-theme-2.scss */
   .logo-mini {
     margin: 0;
   }
 }
-/* line 83, ../sass/variables-theme-2.scss */
+/* line 81, ../sass/variables-theme-2.scss */
 .logo-mini svg * {
   fill: #02b26a !important;
 }
 
-/* line 90, ../sass/variables-theme-2.scss */
+/* line 88, ../sass/variables-theme-2.scss */
 .menu-sidebar .header-box > div ul li a,
 .menu-sidebar .header-box > div ul li a i {
-  color: #bbbbbb !important;
+  color: #bbbbbb!important;
 }
 @media (max-width: 767px) {
-  /* line 90, ../sass/variables-theme-2.scss */
+  /* line 88, ../sass/variables-theme-2.scss */
   .menu-sidebar .header-box > div ul li a,
   .menu-sidebar .header-box > div ul li a i {
-    color: #bbbbbb !important;
+    color: #bbbbbb!important;
   }
 }
-/* line 95, ../sass/variables-theme-2.scss */
+/* line 93, ../sass/variables-theme-2.scss */
 .menu-sidebar .header-box > div ul li a:after,
 .menu-sidebar .header-box > div ul li a i:after {
   background: #bbbbbb;
@@ -145,19 +139,19 @@ a.default-hovered:focus:after {
 
 /*Primary
 ---------------------------------------------*/
-/* line 101, ../sass/variables-theme-2.scss */
+/* line 99, ../sass/variables-theme-2.scss */
 .primary-banner h1 {
   margin-bottom: 30px;
 }
 
-/* line 104, ../sass/variables-theme-2.scss */
+/* line 102, ../sass/variables-theme-2.scss */
 .primary-banner p.tlt {
   font-size: 40px;
   font-weight: 700;
   line-height: 30px;
 }
 @media (max-width: 767px) {
-  /* line 104, ../sass/variables-theme-2.scss */
+  /* line 102, ../sass/variables-theme-2.scss */
   .primary-banner p.tlt {
     font-size: 18px;
   }
@@ -165,7 +159,7 @@ a.default-hovered:focus:after {
 
 /* About
 ------------------------------------------------------------------------------------*/
-/* line 116, ../sass/variables-theme-2.scss */
+/* line 114, ../sass/variables-theme-2.scss */
 #about-us .table-block h1,
 #about-us h5 {
   color: #02b26a;
@@ -173,19 +167,19 @@ a.default-hovered:focus:after {
 
 /*sample-3
 ------------------------------------------------------------------------------------*/
-/* line 123, ../sass/variables-theme-2.scss */
+/* line 121, ../sass/variables-theme-2.scss */
 .sample-3 span {
   color: #02b26a;
 }
-/* line 126, ../sass/variables-theme-2.scss */
+/* line 124, ../sass/variables-theme-2.scss */
 .sample-3 .btn-default.red-style {
   background: #02b26a;
 }
-/* line 129, ../sass/variables-theme-2.scss */
+/* line 127, ../sass/variables-theme-2.scss */
 .sample-3 .btn-default.red-style:hover, .sample-3 .btn-default.red-style.button-hover {
   background: #02995b;
 }
-/* line 135, ../sass/variables-theme-2.scss */
+/* line 133, ../sass/variables-theme-2.scss */
 .sample-3 .btn-default.red-style:active, .sample-3 .btn-default.red-style:focus, .sample-3 .btn-default.red-style:active:focus, .sample-3 .btn-default.red-style.button-active {
   background: #028f55;
   box-shadow: inset 0 2px 0px #028a52;
@@ -193,29 +187,29 @@ a.default-hovered:focus:after {
 
 /* portfolio
 ------------------------------------------------------------------------------------*/
-/* line 144, ../sass/variables-theme-2.scss */
+/* line 142, ../sass/variables-theme-2.scss */
 .portfolio .isotop-filters {
   opacity: .95;
   background: #02b26a;
 }
 
-/* line 148, ../sass/variables-theme-2.scss */
+/* line 146, ../sass/variables-theme-2.scss */
 .sliders .container-fluid .a-slider-tcontrols {
   background: #02b26a;
 }
 
-/* line 151, ../sass/variables-theme-2.scss */
+/* line 149, ../sass/variables-theme-2.scss */
 .sliders .container-fluid .a-slider-tcontrols a {
   color: #fff;
 }
 
-/* line 155, ../sass/variables-theme-2.scss */
+/* line 153, ../sass/variables-theme-2.scss */
 .sliders .container-fluid .additional-info .heading,
 .sliders .container-fluid .album-sliders-container h4.album-name {
   color: #02b26a;
 }
 
-/* line 161, ../sass/variables-theme-2.scss */
+/* line 159, ../sass/variables-theme-2.scss */
 .portfolio .element-item:focus .overlay,
 .portfolio .element-item:active .overlay,
 .portfolio .element-item:hover .overlay {
@@ -223,47 +217,47 @@ a.default-hovered:focus:after {
   background: #02b26a;
 }
 
-/* line 165, ../sass/variables-theme-2.scss */
+/* line 163, ../sass/variables-theme-2.scss */
 .portfolio .isotope h3 span {
   color: #fff;
 }
 
-/* line 169, ../sass/variables-theme-2.scss */
+/* line 167, ../sass/variables-theme-2.scss */
 .sliders .container-fluid .additional-info .link a {
   background: #02b26a;
 }
 
-/* line 172, ../sass/variables-theme-2.scss */
+/* line 170, ../sass/variables-theme-2.scss */
 .sliders .container-fluid .additional-info .link a:hover {
   opacity: .9;
   background: #02b26a;
 }
 
-/* line 177, ../sass/variables-theme-2.scss */
+/* line 175, ../sass/variables-theme-2.scss */
 .portfolio .element-item .overlay .p-target path {
   fill: #fff;
 }
 
 /*.client-carousel
 ------------------------------------------------------------------------------------*/
-/* line 184, ../sass/variables-theme-2.scss */
+/* line 182, ../sass/variables-theme-2.scss */
 .client-carousel h5,
 .client-carousel span {
   color: #fff;
 }
 
-/* line 187, ../sass/variables-theme-2.scss */
+/* line 185, ../sass/variables-theme-2.scss */
 .client-carousel h5:after {
   background: rgba(255, 255, 255, 0.75);
 }
 
-/* line 191, ../sass/variables-theme-2.scss */
+/* line 189, ../sass/variables-theme-2.scss */
 .cl-thumbs-wrapper .cl-prev,
 .cl-thumbs-wrapper .cl-next {
   color: rgba(255, 255, 255, 0.6);
 }
 
-/* line 195, ../sass/variables-theme-2.scss */
+/* line 193, ../sass/variables-theme-2.scss */
 .cl-thumbs-wrapper .cl-prev:hover,
 .cl-thumbs-wrapper .cl-next:hover {
   color: #FFFFFF;
@@ -271,7 +265,7 @@ a.default-hovered:focus:after {
 
 /*fan-facts
 ------------------------------------------------------------------------------------*/
-/* line 202, ../sass/variables-theme-2.scss */
+/* line 200, ../sass/variables-theme-2.scss */
 .fan-facts .timer-box .timer,
 .fan-facts .timer-box p i {
   color: #02b26a;
@@ -279,37 +273,37 @@ a.default-hovered:focus:after {
 
 /*contact
 ------------------------------------------------------------------------------------*/
-/* line 208, ../sass/variables-theme-2.scss */
+/* line 206, ../sass/variables-theme-2.scss */
 #contact .table-box h1 {
   color: rgba(2, 178, 106, 0.9);
 }
 
-/* line 212, ../sass/variables-theme-2.scss */
+/* line 210, ../sass/variables-theme-2.scss */
 input[type="text"].white-style, input[type="email"].white-style,
 input[type="password"].white-style, input[type="name"].white-style {
   background: rgba(255, 255, 255, 0.2);
   box-shadow: inset 0 1px 0px #02b26a;
 }
 
-/* line 216, ../sass/variables-theme-2.scss */
+/* line 214, ../sass/variables-theme-2.scss */
 textarea.white-style {
   background: rgba(255, 255, 255, 0.2);
   box-shadow: inset 0 1px 0px #02b26a;
 }
 
-/* line 220, ../sass/variables-theme-2.scss */
+/* line 218, ../sass/variables-theme-2.scss */
 .btn-default.white-style {
   color: #02b26a;
 }
 
-/* line 223, ../sass/variables-theme-2.scss */
+/* line 221, ../sass/variables-theme-2.scss */
 textarea.white-style:focus {
   box-shadow: inset 0 1px 0px #02b26a;
 }
 
 /*animation
 ----------------------------------------------------------------------------------*/
-/* line 229, ../sass/variables-theme-2.scss */
+/* line 227, ../sass/variables-theme-2.scss */
 .pulse {
   animation-name: pulse;
   -webkit-animation-name: pulse;
@@ -323,34 +317,34 @@ textarea.white-style:focus {
 }
 
 @keyframes pulse {
-  /* line 241, ../sass/variables-theme-2.scss */
+  /* line 239, ../sass/variables-theme-2.scss */
   0% {
     transform: scale(0.9) rotate(0deg);
   }
 
-  /* line 244, ../sass/variables-theme-2.scss */
+  /* line 242, ../sass/variables-theme-2.scss */
   50% {
     transform: scale(1) rotate(5deg);
   }
 
-  /* line 247, ../sass/variables-theme-2.scss */
+  /* line 245, ../sass/variables-theme-2.scss */
   100% {
     transform: scale(0.9) rotate(0deg);
   }
 }
 
 @-webkit-keyframes pulse {
-  /* line 253, ../sass/variables-theme-2.scss */
+  /* line 251, ../sass/variables-theme-2.scss */
   0% {
     -webkit-transform: scale(0.95), rotate(0deg);
   }
 
-  /* line 256, ../sass/variables-theme-2.scss */
+  /* line 254, ../sass/variables-theme-2.scss */
   50% {
     -webkit-transform: scale(1), rotate(5deg);
   }
 
-  /* line 259, ../sass/variables-theme-2.scss */
+  /* line 257, ../sass/variables-theme-2.scss */
   100% {
     -webkit-transform: scale(0.95), rotate(0deg);
   }
@@ -358,7 +352,7 @@ textarea.white-style:focus {
 
 /* Team
 -----------------------------------------------------------------*/
-/* line 268, ../sass/variables-theme-2.scss */
+/* line 266, ../sass/variables-theme-2.scss */
 #thumbs-wrapper #thumbs a:hover span,
 #thumbs-wrapper #thumbs a.selected span,
 #thumbs-wrapper #thumbs a:focus span {
