--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -3,10 +3,19 @@
 /* --------------------------------------------------- */
 
 html, body {
-	font-family: 'Raleway', sans-serif;
+	font-family: 'Oswald', sans-serif;
 	margin: 0;
 	padding: 0;
 	font-size: 14px;
+}
+
+p {
+
+font-family: 'Open Sans', sans-serif;
+	margin: 0;
+	padding: 0;
+	font-size: 14px;
+	
 }
 .typography-section{
 	padding-bottom: 70px;
