--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1794,10 +1794,16 @@ h4 {
 
 a {
 text-transform:uppercase;
-color:#666;
+color:#fff;
 padding:10px 50px;
-border:1px solid #666;
+background-color:#53565A;
 margin-top:20px;
+}
+
+a:hover {
+  border:1px solid #53565A;
+  background:transparent;
+  color:#53565A;
 }
 
 p {
@@ -1836,7 +1842,8 @@ color:#ffffff;
 }
 
 .toc a:hover {
-background: rgba(162,162,162,0.1);
+background-color: rgba(162,162,162,0.1);
+display:block;
 
 }
 
@@ -1844,6 +1851,10 @@ background: rgba(162,162,162,0.1);
 border-bottom:1px solid #535353;
 padding:15px;
 max-width:320px;
+
+img {
+  border:1px solid #707070;
+}
 
 }
 
@@ -2476,6 +2487,10 @@ font-size: 12px;
 padding: 15px;
 text-align: center;
 background-color: #263846;
+
+span {
+  font-family: 'Open Sans', sans-serif;
+}
 }
 
 
