Adds “Chapter 5 and 6 content”

--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -221,7 +221,9 @@ ol, ul{
 }
 ul{
 	padding-left: 17px;
+	    line-height: 1.75;
 	li{
+
 		  list-style-image: url(../images/li-img.png);
 		// &:before {
 		//   content: ".";
