--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1677,39 +1677,39 @@ left: 33.3%;
 
 
 .chapter1 {
-    background: #000000 url("../images/chapter1-bkgd.jpg") no-repeat left top;
-    background-size: cover;
-    width:100%;
+background: #000000 url("../images/chapter1-bkgd.jpg") no-repeat left top;
+background-size: cover;
+width:100%;
 }
 
 .chapter2 {
 background: #000000 url("../images/chapter2-bkgd.jpg") no-repeat left top;
-    background-size: cover;
-    width:100%;
+background-size: cover;
+width:100%;
 }
 
 .chapter3 {
 background: #000000 url("../images/chapter3-bkgd.jpg") no-repeat left top;
-    background-size: cover;
-    width:100%;
+background-size: cover;
+width:100%;
 }
 
 .chapter4 {
 background: #000000 url("../images/chapter4-bkgd.jpg") no-repeat left top;
-    background-size: cover;
-    width:100%;
+background-size: cover;
+width:100%;
 }
 
 .chapter5 {
 background: #000000 url("../images/chapter5-bkgd.jpg") no-repeat left top;
-    background-size: cover;
-    width:100%;
+background-size: cover;
+width:100%;
 }
 
 .chapter6 {
 background: #000000 url("../images/chapter6-bkgd.jpg") no-repeat left top;
-    background-size: cover;
-    width:100%;
+background-size: cover;
+width:100%;
 }
 
 .content {
@@ -1745,40 +1745,54 @@ font-weight:lighter;
 }
 
 h1 {
-  font-size:74px;
+font-size:74px;
 }
 }
 
 .next-sections {
-  font-family: 'Open Sans', sans-serif;
+font-family: 'Open Sans', sans-serif;
 }
 
 .top-nav-line.scrolling {
-    background-color: #00A6B6;
-    height: 65px;
+background-color: #00A6B6;
+height: 65px;
 
 }
 
 .top-nav-line img {
-  position:fixed;
-  top:4%;
-  left:50%;
-  margin-top:-10px;
-  margin-left:-92px;
+position:fixed;
+top:4%;
+left:50%;
+margin-top:-10px;
+margin-left:-92px;
 }
 
 #article-banner {
-  height:500px;
-  width:100%;
+height:500px;
+width:100%;
 }
 
 #article-wrap {
-  padding: 50px;
-    background-color: #fff;
-    position: relative;
-    top: -117px;
-    text-align: left;
+padding: 50px;
+background-color: #fff;
+position: relative;
+top: -117px;
+text-align: left;
+
+h2 {
+color:#000;
+font-weight:400;
+font-family: 'Oswald', sans-serif;
 }
+
+h3 {
+color:#035157;
+font-weight:400;
+letter-spacing:2px;
+font-family: 'Oswald', sans-serif;
+}
+}
+
 
 
 
@@ -1786,28 +1800,28 @@ h1 {
 -----------------------------------------------------------------------------------*/
 
 .lead {
-  color:#00A6B6;
-  font-family: 'Open Sans', sans-serif;
-  line-height: 35px;
+color:#00A6B6;
+font-family: 'Open Sans', sans-serif;
+line-height: 35px;
 }
 
 .intro-section {
 width: 100%;
 padding: 50px 0;
-color: #fff;
 -webkit-background-size: cover;
 -moz-background-size: cover;
 background-size: cover;
 -o-background-size: cover;
+font-family: 'Open Sans', sans-serif;
 }
 
 .intro {
 
 h4 {
-  text-transform: uppercase;
-  color:#00A6B6;
-  font-size:18px;
-  letter-spacing:2px;
+text-transform: uppercase;
+color:#00A6B6;
+font-size:18px;
+letter-spacing:2px;
 }
 
 a {
@@ -1819,14 +1833,14 @@ margin-top:20px;
 }
 
 a:hover {
-  border:1px solid #53565A;
-  background:transparent;
-  color:#53565A;
+border:1px solid #53565A;
+background:transparent;
+color:#53565A;
 }
 
 p {
-  color:#53565A;
-  margin-bottom:30px;
+color:#53565A;
+margin-bottom:30px;
 }
 
 
@@ -1872,7 +1886,7 @@ padding:15px;
 max-width:320px;
 
 img {
-  border:1px solid #707070;
+border:1px solid #707070;
 }
 
 }
@@ -1926,25 +1940,31 @@ background-color:#fff;
 -----------------------------------------------------------------------------------*/
 
 .title-wrap {
-  width:700px;
-  margin: 0 auto;
+width:700px;
+margin: 0 auto;
+}
+
+.list-wrap {
+margin: 0 0 20px 10px;
+display: inline-block;
+width: 100%;
 }
 
 .chap-cover {
-  font-family: 'Oswald', sans-serif;
-  color:#fff;
-  text-transform:uppercase;
+font-family: 'Oswald', sans-serif;
+color:#fff;
+text-transform:uppercase;
 
-  span {
-  font-size:20px;
-   letter-spacing:2px;
-   font-weight:lighter;
-  }
+span {
+font-size:20px;
+letter-spacing:2px;
+font-weight:lighter;
+}
 
-  h2 {
-    font-size:55px;
-    font-weight:400;
-  }
+h2 {
+font-size:55px;
+font-weight:400;
+}
 }
 
 .content p {
@@ -1952,7 +1972,7 @@ margin:0;
 }
 
 .content h3 {
-  font-size:24px;
+font-size:24px;
 }
 
 .articles a {
@@ -1965,25 +1985,36 @@ letter-spacing:2px;
 }
 
 .articles a:hover {
-  border:1px solid #fff;
-  background:none;
+border:1px solid #fff;
+background:none;
 }
 
 .articles {
-  
-  h3 {
-    font-size:30px;
-    font-weight:400;
-    margin-bottom:30px;
-  }
 
-  p {
-   font-size:16px;
-   font-weight:200;
-   color:#96d5ea;
-   font-family: 'Oswald', sans-serif;
-   letter-spacing:2px;
-  }
+h3 {
+font-size:30px;
+font-weight:400;
+margin-bottom:30px;
+}
+
+p {
+font-size:16px;
+font-weight:200;
+color:#96d5ea;
+font-family: 'Oswald', sans-serif;
+letter-spacing:2px;
+}
+}
+
+.highlight {
+  margin-bottom:10px;
+  line-height: 1.75;
+  color:#53565A;
+}
+
+.highlight > span {
+  color:#035157;
+  font-weight:bold;
 }
 
 /*  SLIDERS PORTFOLIO STYLE 
@@ -2530,7 +2561,7 @@ text-align: center;
 background-color: #263846;
 
 span {
-  font-family: 'Open Sans', sans-serif;
+font-family: 'Open Sans', sans-serif;
 }
 }
 
