Adds “Chapter 3 styles”

--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -213,10 +213,12 @@ figure{
 ----------------------------------------------------- */
 ol{
 	padding-left: 25px;
+	  font-family: 'Open Sans', sans-serif;
 }
 ol, ul{
 	li{
 		padding: 3px 0 2px 0;
+		  font-family: 'Open Sans', sans-serif;
 	}
 }
 ul{
