--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1823,9 +1823,26 @@ background-color: rgba(255, 255, 255, 0.2);
     }
   }
 
+    @media screen and (min-width:1200px){
+    .grey-bkgd {
+    padding: 90px 0 0 0 !important;
+    }
+  }
+
+/*  HOW TO USE PLAYBOOK
+-----------------------------------------------------------------------------------*/
+
+.snippet h5 {
+  font-weight:lighter;
+  color:#035157;
+  margin-bottom:8px;
+}
+
+
 
 /*  TERRELL'S INTRO
 -----------------------------------------------------------------------------------*/
+
 
 blockquote p {
   margin-bottom:15px;
@@ -2113,6 +2130,10 @@ ol.list-style {
   border-bottom:1px solid #53565A;
   padding-bottom:40px;
   margin-bottom:40px;
+}
+
+.vid-wrap {
+  margin-bottom:50px;
 }
 
 /*  SLIDERS PORTFOLIO STYLE 
