--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1674,6 +1674,43 @@ left: 33.3%;
 }
 }
 
+/*  CHAPTER NAVIGATION STYLES
+-----------------------------------------------------------------------------------*/
+
+.next {
+  position:relative;
+  font-size:18px;
+  color:#fff;
+  height:300px;
+}
+
+.chap-nav {
+  text-align:center;
+}
+
+.chap-nav a {
+  color:#fff;
+  font-weight:lighter;
+  font-size:24px;
+  text-transform:uppercase;
+  letter-spacing:2px;
+  border:1px solid #fff;
+  padding:15px 30px;
+  display: inline-block;
+  position: absolute;
+    /* top: 266%; */
+    left: 50%;
+    /* height: 30%; */
+    width: 50%;
+    margin: 10% 0 0 -25%;
+  
+}
+
+.chap-nav a:hover {
+  background-color:#00a6b6;
+border:1px solid #00a6b6;
+}
+
 /*  TERRELL'S STYLES
 -----------------------------------------------------------------------------------*/
 
@@ -1817,30 +1854,46 @@ background-color: rgba(255, 255, 255, 0.2);
 /*  TERRELL'S RESPONSIVE
 -----------------------------------------------------------------------------------*/
 
+
+
   @media screen and (min-width:768px){
-    .grey-bkgd {
-    padding: 90px 0 0 0 !important;
-    }
+
+  .chap-nav a {
+    margin: 14% 0 0 -25% !important;
+  }
+    
   }
 
     @media screen and (min-width:1200px){
-    .grey-bkgd {
-    padding: 90px 0 0 0 !important;
-    }
+  
   }
+
 
 /*  HOW TO USE PLAYBOOK
 -----------------------------------------------------------------------------------*/
 
 .snippet h5 {
   font-weight:lighter;
-  color:#035157;
+  color:#00A6B6;
   margin-bottom:8px;
 }
 
+/*  TERRELL'S INTRODUCTON
+-----------------------------------------------------------------------------------*/
+
+.global h5 {
+  font-weight:lighter;
+  color:#00A6B6;
+  border-bottom:1px solid #00A6B6; 
+  padding-bottom:15px;
+}
+
+.sidenote li {
+  list-style:circle;
+}
 
 
-/*  TERRELL'S INTRO
+/*  TERRELL'S SECTION INTRO
 -----------------------------------------------------------------------------------*/
 
 
@@ -2110,9 +2163,9 @@ ol.list-style {
 
 .grey-bkgd {
   background-color:#f3f3f3;
-  padding:90px;
   position:relative;
   margin-bottom: 50px;
+  padding:50px 0;
 }
 
 .blue-bkgd {
@@ -2135,6 +2188,8 @@ ol.list-style {
 .vid-wrap {
   margin-bottom:50px;
 }
+
+
 
 /*  SLIDERS PORTFOLIO STYLE 
 -----------------------------------------------------------------------------------*/
@@ -2678,7 +2733,7 @@ font-size: 12px;
 padding: 15px;
 text-align: center;
 background-color: #263846;
-margin-top: 100px;
+
 
 span {
 font-family: 'Open Sans', sans-serif;
@@ -4046,7 +4101,7 @@ text-overflow: ellipsis;
 }
 
 blockquote {
-margin-bottom: 29px;
+margin-bottom: 0;
 margin-top: 50px;
 padding-top: 29px;
 }
