--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1865,9 +1865,32 @@ background-color: rgba(255, 255, 255, 0.2);
   }
 
     @media screen and (min-width:1200px){
+
+    .chap-nav a {
+    margin: 9% 0 0 -25% !important;
+  }
   
   }
 
+
+/*  CHAPTER ONE
+-----------------------------------------------------------------------------------*/
+
+.icon-wrap {
+  text-align:center;
+}
+
+.icon-set > img {
+  margin-bottom:20px;
+}
+
+
+/*  CHAPTER ONE
+-----------------------------------------------------------------------------------*/
+
+.global p {
+  margin-bottom:40px;
+}
 
 /*  HOW TO USE PLAYBOOK
 -----------------------------------------------------------------------------------*/
