adds image modal functionality, and one test to final image on chapter 3

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -92,6 +92,7 @@ License URI: http://themeforest.net/licenses/regular-extended
 @import "typography.scss";
 @import "primary-menu.scss";
 @import "vertical-tabs.scss";
+@import "modals.scss";
 
 body {
 color: $darkcolor;
