Adds “New TOC and Home Page Images”

--- a/sass/_primary-menu.scss
+++ b/sass/_primary-menu.scss
@@ -266,7 +266,7 @@
 				border:0 none;
 				box-shadow:none;
 				left:auto;
-				margin:20px 0 0;
+				margin:65px 0;
 				max-height:inherit;
 				overflow:hidden !important;
 				padding:0;
