--- a/sass/style.scss
+++ b/sass/style.scss
@@ -207,35 +207,53 @@ padding-top: 30px;
 
 /* Background 
 -----------------------------------------------------------------*/
-.background {
-height: 100%;
-left: 0;
-overflow: hidden;
-position: absolute;
-top: 0;
-width: 100%;
-z-index: 0;
-background-color:#000;
+main>.background{
+	display:none;
+}
 
-.layer {
--webkit-background-size: cover;
-background-position: 50% 50%;
-background-repeat: no-repeat;
-background-size: cover;
-height: 100%;
-left: 0;
-overflow: hidden;
-position: absolute;
-top: 0;
-width: 100%;
-&.left-50{
-z-index: 0;
-@media(min-width:768px){
-left: -50%;
+.background {
+	height: 100%;
+	left: 0;
+	overflow: hidden;
+	position: absolute;
+	top: 0;
+	width: 100%;
+	z-index: 0;
+	background-color:#000;
+
+	&::after{
+		content:'';
+		position: absolute;
+		top: 0;
+		left: 0;
+		bottom: 0;
+		right: 0;
+		background: linear-gradient(to right, #72A94E 0%,#00A5B5 100%);
+		opacity: .5;
+	}
+
+	.layer {
+		-webkit-background-size: cover;
+		background-position: 50% 50%;
+		background-repeat: no-repeat;
+		background-size: cover;
+		height: 100%;
+		left: 0;
+		overflow: hidden;
+		position: absolute;
+		top: 0;
+		width: 100%;
+		opacity: 1 !important;
+		filter: grayscale(1);
+		&.left-50{
+			z-index: 0;
+			@media(min-width:768px){
+				left: -50%;
+			}
+		}
+	}
 }
-}
-}
-}
+
 .bg-inside{
 position: relative;
 }
@@ -612,6 +630,7 @@ display: none;
 ------------------------------------------------------------------*/
 .primary-banner{
 width: 100%;
+height: 100vh;
 h1{
 color: $whitecolor;
 margin-bottom: 6px;
@@ -2042,6 +2061,8 @@ font-weight:lighter;
 
 
 .intro {
+	padding-top: 30px;
+	padding-bottom: 30px;
 
 h4 {
 text-transform: uppercase;
@@ -2060,6 +2081,8 @@ padding:10px 50px;
 font-family: 'Oswald', sans-serif;
 letter-spacing: 2px;
 display: inline-block;
+@extend .gradientBorder;
+@extend .transition;
 }
 
 a:hover {
@@ -2225,6 +2248,10 @@ font-size:24px;
 .gradientBorder{
 	border: 1px solid transparent;
 	border-image: linear-gradient(to right, #72A94E 0%,#00A5B5 100%) 1 stretch;
+}
+
+.transition{
+	transition: .3s ease-out all;
 }
 
 .articles a {
@@ -2938,9 +2965,9 @@ border-bottom:1px solid #f0eed9;
 .services{
 border-bottom: 1px solid #f0eed9;
 .background {
-.layer {
-background-color: $whitecolor;
-}
+	.layer {
+	background-color: $whitecolor;
+	}
 }
 h1{
 opacity: 1;
