Adds “Chapter 4 icons”

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -2340,6 +2340,24 @@ margin-bottom:40px;
 margin-bottom:50px;
 }
 
+/*  TERRELL'S SECTION--CHAPTER 4
+-----------------------------------------------------------------------------------*/
+
+.list-style span {
+	color: #035157;
+	font-family: 'Open Sans', sans-serif;
+	font-weight:bold;
+}
+
+.spacing {
+	margin-bottom:20px;
+}
+
+.global span {
+	text-transform:uppercase;
+	
+}
+
 
 /*  TERRELL'S SECTION--CHAPTER 5
 -----------------------------------------------------------------------------------*/
