--- a/sass/style.scss
+++ b/sass/style.scss
@@ -205,37 +205,65 @@ padding-top: 30px;
 }
 }
 
+.gradientBorder{
+	border: 1px solid transparent;
+	border-image: linear-gradient(to right, #72A94E 0%,#00A5B5 100%) 1 stretch;
+}
+
+.transition{
+	transition: .3s ease-out all;
+}
+
+
 /* Background 
 -----------------------------------------------------------------*/
-.background {
-height: 100%;
-left: 0;
-overflow: hidden;
-position: absolute;
-top: 0;
-width: 100%;
-z-index: 0;
-background-color:#000;
+main>.background{
+	display:none;
+}
 
-.layer {
--webkit-background-size: cover;
-background-position: 50% 50%;
-background-repeat: no-repeat;
-background-size: cover;
-height: 100%;
-left: 0;
-overflow: hidden;
-position: absolute;
-top: 0;
-width: 100%;
-&.left-50{
-z-index: 0;
-@media(min-width:768px){
-left: -50%;
+.background {
+	height: 100%;
+	left: 0;
+	overflow: hidden;
+	position: absolute;
+	top: 0;
+	width: 100%;
+	z-index: 0;
+	background-color:#000;
+
+	&::after{
+		content:'';
+		position: absolute;
+		top: 0;
+		left: 0;
+		bottom: 0;
+		right: 0;
+		background: linear-gradient(to right, #72A94E 0%,#00A5B5 100%);
+		opacity: .5;
+	}
+
+	.layer {
+		-webkit-background-size: cover;
+		background-position: 50% 50%;
+		background-repeat: no-repeat;
+		background-size: cover;
+		height: 100%;
+		left: 0;
+		overflow: hidden;
+		position: absolute;
+		top: 0;
+		width: 100%;
+		opacity: 1 !important;
+		filter: grayscale(1);
+		&.left-50{
+			z-index: 0;
+			@media(min-width:768px){
+				left: -50%;
+			}
+		}
+	}
 }
-}
-}
-}
+
 .bg-inside{
 position: relative;
 }
@@ -612,6 +640,7 @@ display: none;
 ------------------------------------------------------------------*/
 .primary-banner{
 width: 100%;
+height: 100vh;
 h1{
 color: $whitecolor;
 margin-bottom: 6px;
@@ -1748,12 +1777,12 @@ text-align:center;
 }
 
 .chap-nav a {
+
 color:#fff;
 font-weight:lighter;
 font-size:24px;
 text-transform:uppercase;
 letter-spacing:2px;
-border:1px solid #fff;
 padding:15px 30px;
 display: inline-block;
 position: absolute;
@@ -1762,7 +1791,8 @@ left: 50%;
 /* height: 30%; */
 width: 50%;
 margin: 10% 0 0 -25%;
-
+@extend .gradientBorder;
+@extend .transition;
 }
 
 .chap-nav a:hover {
@@ -2084,6 +2114,9 @@ margin-top: -65px;
 
 
 .intro {
+	padding-top: 30px;
+	padding-bottom: 30px;
+
 
 h4 {
 text-transform: uppercase;
@@ -2267,12 +2300,13 @@ font-size:24px;
 .articles a {
 text-transform:uppercase;
 color:#fff;
-border:1px solid #fff;
 background:none;
 padding:10px 50px;
 font-weight:200;
 letter-spacing:2px;
 display:inline-block;
+@extend .gradientBorder;
+@extend .transition;
 }
 
 .articles a:hover {
@@ -2291,7 +2325,7 @@ margin-bottom:30px;
 p {
 font-size:16px;
 font-weight:200;
-color:#96d5ea;
+color:#00A5B5;
 font-family: 'Oswald', sans-serif;
 letter-spacing:2px;
 }
