--- a/sass/style.scss
+++ b/sass/style.scss
@@ -2145,13 +2145,13 @@ font-family: 'Oswald', sans-serif;
 }
 
 a {
-border:1px solid #00a6b6;
 text-transform:uppercase;
 color:#00a6b6;
 padding:10px 50px;
 font-family: 'Oswald', sans-serif;
 letter-spacing: 2px;
 display: inline-block;
+@extend .gradientBorder;
 }
 
 a:hover {
