--- a/css/style.css
+++ b/css/style.css
@@ -2275,7 +2275,7 @@ main {
   border-style: solid;
   border-width: 1px; }
 
-.transition, .chap-nav a, .articles a {
+.transition, .top-nav-line, .chap-nav a, .articles a {
   -webkit-transition: .3s ease-out all;
   transition: .3s ease-out all; }
 
@@ -2547,7 +2547,7 @@ header.top-menu {
 ---------------------------------------------------------------*/
 .top-nav-line {
   display: none;
-  height: 87px;
+  height: 65px;
   left: 0;
   position: fixed;
   right: 0;
