--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1909,11 +1909,11 @@ height: 65px;
 }
 
 .top-nav-line img {
-position:fixed;
-top:4%;
-left:50%;
-margin-top:-10px;
-margin-left:-92px;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	margin-top: -10px;
+	margin-left: -92px;
 }
 
 #article-banner {
